Melhora layout do HTML e hero

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Suavenda</title>
+  <title>SuaVenda</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -22,27 +23,31 @@
     </nav>
   </header>
 
-  <!-- SEÇÕES -->
+  <!-- HERO / HOME -->
   <section id="home">
-    <h1>Bem-vindo à SuaVenda</h1>
-    <p>As melhores ofertas em um só lugar</p>
+    <h1>🔥 SuaVenda</h1>
+    <p>As melhores ofertas e produtos afiliados em um só lugar</p>
   </section>
 
+  <!-- OFERTAS -->
   <section id="ofertas">
     <h2>🔥 Ofertas em Destaque</h2>
+    <p>Selecionamos oportunidades que realmente valem a pena.</p>
   </section>
 
+  <!-- PRODUTOS -->
   <section id="produtos">
     <h2>🛒 Produtos</h2>
     <main id="product-list"></main>
   </section>
 
+  <!-- CONTATO -->
   <section id="contato">
     <h2>📞 Contato</h2>
-    <p>Em breve canais de atendimento.</p>
+    <p>Em breve teremos canais de atendimento.</p>
   </section>
 
-  <!-- SCRIPTS -->
+  <!-- SCRIPTS MVC -->
   <script src="assets/js/model/products.js"></script>
   <script src="assets/js/view/renderView.js"></script>
   <script src="assets/js/controller/appController.js"></script>
