Mudanca no email

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <!-- CONTATO -->
   <section id="contato" class="section">
     <h2>Contato</h2>
-    <p>Entre em contato pelo e-mail: <a href="mailto:contato@suavenda.com">contato@suavenda.com</a></p>
+    <p>Entre em contato pelo e-mail: <a href="mailto:tiagohenrique10.silva@gmail.com">contato@suavenda.com</a></p>
   </section>
 
   <!-- SCRIPTS -->
